登录，注册，我的中心三个布局

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <!--淡灰色-->
     <color name="gainsboro">#dcdcdc</color>
     <color name="white">#ffffff</color>
+    <color name="common_red">#9000</color>
 </resources>
