--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,7 @@
         android:background="#ffffff">
 
         <ImageView
+            android:id="@+id/login_go_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -22,6 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="登录"
+            android:textColor="#f484ba"
             android:textSize="24dp" />
     </RelativeLayout>
 
@@ -44,6 +46,7 @@
                 android:orientation="vertical">
 
                 <EditText
+                    android:id="@+id/login_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
@@ -54,13 +57,14 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="0.5dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:layout_marginTop="10dp"
                     android:background="#aca8a8" />
 
                 <EditText
+                    android:id="@+id/login_userpwd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -68,8 +72,27 @@
                     android:layout_marginTop="10dp"
                     android:background="@null"
                     android:hint="密码"
+                    android:inputType="textPassword"
                     android:textSize="14dp" />
             </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="15dp"
+                android:background="@mipmap/regist_bg">
+
+                <TextView
+                    android:id="@+id/login_btn_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:padding="10dp"
+                    android:text="登录"
+                    android:textColor="#fff" />
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -77,6 +100,7 @@
                 android:layout_marginTop="10dp">
 
                 <TextView
+                    android:id="@+id/login_register"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
