--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -45,20 +45,22 @@
                         android:layout_weight="1">
 
                         <TextView
+                            android:id="@+id/me_guanzhu"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_centerInParent="true"
                             android:background="@drawable/user_oval"
                             android:gravity="center"
                             android:text="关注\n24"
-                            android:textColor="#fff" />
+                            android:textColor="#fff"
+                            android:visibility="gone" />
                     </RelativeLayout>
 
                     <RelativeLayout
                         android:layout_width="50dp"
                         android:layout_height="match_parent">
 
-                        <ImageButton
+                        <ImageView
                             android:id="@+id/btn_head"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
@@ -73,13 +75,15 @@
                         android:layout_weight="1">
 
                         <TextView
+                            android:id="@+id/me_fensi"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_centerInParent="true"
                             android:background="@drawable/user_oval"
                             android:gravity="center"
                             android:text="粉丝\n224"
-                            android:textColor="#fff" />
+                            android:textColor="#fff"
+                            android:visibility="gone" />
                     </RelativeLayout>
                 </LinearLayout>
 
@@ -89,7 +93,6 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="5dp"
                     android:drawablePadding="5dp"
-                    android:drawableRight="@mipmap/girl"
                     android:gravity="center"
                     android:text="点击登陆" />
             </LinearLayout>
@@ -175,7 +178,6 @@
             </LinearLayout>
 
             <RelativeLayout
-                android:id="@+id/me_baobei"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2">
