--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <!--淡灰色-->
     <color name="gainsboro">#dcdcdc</color>
     <color name="white">#ffffff</color>
+    <color name="Red">#ff0000</color>
+    <color name="Black">#000000</color>
+    <color name="Gray">#88000000</color>
+
 </resources>
