--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,10 @@
     <color name="gainsboro">#dcdcdc</color>
     <color name="white">#ffffff</color>
     <color name="common_red">#9000</color>
+    <color name="Red">#ff0000</color>
+
+    <color name="Black">#000000</color>
+    <color name="Gray">#88000000</color>
 
 
 
